# r_motion

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/r_motion/: r_motion_state.h  utils.h
source/: r_motion_state.cpp  utils.cpp
ut/: CMakeLists.txt
ut/include/: test_r_motion.h
ut/source/: framework.cpp  test_r_motion.cpp
